# LR35902

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  justfile  meson.build  meson.format  meson.options  readme.md  todo  vcpkg.json  xmake.lua
backend/: Emu.cpp  GameBoy.cpp  GameBoy.h
debugger/: AppBase.cpp  AppBase.h  Debugger.cpp  Debugger.h  GameBoy.cpp  GameBoy.h  main.cpp
debugger/sdl/: main.cpp  palettes.h
debugger/sdl2/: main.cpp
debugger/sfml/: main.cpp  palettes.h
include/LR35902/: config.h  core.h  memory_map.h
include/LR35902/bootrom/: bootrom.h
include/LR35902/builtin/: builtin.h
include/LR35902/bus/: bus.h
include/LR35902/cartridge/: cartridge.h
include/LR35902/cartridge/header/: header.h
include/LR35902/cartridge/kind/: all.h  mbc1.h  mbc1_128kb.h  mbc1_2mb.h  mbc1_512kb.h  mbc1_64kb.h  mbc1_ram.h  mbc2.h  mbc3.h  mbc5.h  mbc_config.h  rom_only.h  rom_ram.h
include/LR35902/cartridge/kind/mbc1/: mbc1.h  mbc1_1mb.h  mbc1_256kb.h  mbc1_32kb.h  mbc1_generic.h
include/LR35902/cartridge/kind/mbc1_ram/: mbc1_32kb_32kb.h  mbc1_ram.h
include/LR35902/cartridge/kind/mbc2/: mbc2.h
include/LR35902/cartridge/kind/mbc3/: mbc3.h
include/LR35902/cartridge/kind/mbc5/: mbc5.h
include/LR35902/cartridge/kind/rom_only/: rom_only.h
include/LR35902/cartridge/kind/rom_ram/: rom_ram.h
include/LR35902/core/: core.h
include/LR35902/core/clock/: clock.h
include/LR35902/core/immediate/: n16.h
include/LR35902/core/registers/: cc.h  flags.h  r16.h  r8.h
include/LR35902/cpu/: cpu.h
include/LR35902/cpu/clock/: clock.h
include/LR35902/cpu/immediate/: n16.h  n8.h  u3.h
include/LR35902/cpu/registers/: r16.h  r8.h
include/LR35902/debugView/: debugView.h
include/LR35902/dma/: dma.h
include/LR35902/immediate/: e8.h  i8.h  n16.h  n8.h  u3.h
include/LR35902/interrupt/: interrupt.h
include/LR35902/io/: io.h
include/LR35902/joypad/: joypad.h
include/LR35902/ppu/: palettes.h  ppu.h
include/LR35902/registers/: cc.h  flags.h  r16.h  r8.h
include/LR35902/stubs/builtin/: builtin.h
include/LR35902/stubs/bus/: bus.h
include/LR35902/stubs/cartridge/: cartridge.h
include/LR35902/stubs/cartridge/kind/: mbc1.h  rom_only.h  rom_ram.h
include/LR35902/stubs/interrupt/: interrupt.h
include/LR35902/stubs/io/: io.h
include/LR35902/stubs/ppu/: ppu.h
include/LR35902/timer/: timer.h
src/: core.cpp
src/bootrom/: bootrom.cpp
src/builtin/: builtin.cpp
src/bus/: bus.cpp
src/cartridge/: cartridge.cpp
src/cartridge/header/: header.cpp  memory_map.h
src/cartridge/kind/: mbc1.cpp  mbc1_128kb.cpp  mbc1_1mb.cpp  mbc1_256kb.cpp  mbc1_2mb.cpp  mbc1_32kb.cpp  mbc1_512kb.cpp  mbc1_64kb.cpp  mbc1_ram.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  rom_only.cpp  rom_ram.cpp
src/cartridge/kind/mbc1/: mbc1.cpp  mbc1_128kb.cpp  mbc1_1mb.cpp  mbc1_256kb.cpp  mbc1_2mb.cpp  mbc1_32kb.cpp  mbc1_512kb.cpp  mbc1_64kb.cpp  mbc1_generic.cpp
src/cartridge/kind/mbc1_ram/: mbc1_32kb_32kb.cpp  mbc1_ram.cpp
src/cartridge/kind/mbc2/: mbc2.cpp
src/cartridge/kind/mbc3/: mbc3.cpp
src/cartridge/kind/mbc5/: mbc5.cpp
src/cartridge/kind/rom_only/: rom_only.cpp
src/cartridge/kind/rom_ram/: rom_ram.cpp
src/core/: core.cpp
src/core/registers/: r16.cpp  r8.cpp
src/cpu/: cpu.cpp
src/cpu/registers/: r16.cpp  r8.cpp
src/debugView/: debugView.cpp
src/dma/: dma.cpp
src/immediate/: e8.cpp  n16.cpp  n8.cpp
src/interrupt/: interrupt.cpp
src/io/: io.cpp
src/joypad/: joypad.cpp
src/ppu/: ppu.cpp
src/registers/: r16.cpp  r8.cpp
src/stubs/builtin/: builtin.cpp
src/stubs/bus/: bus.cpp
src/stubs/cartridge/: cartridge.cpp
src/stubs/cartridge/kind/: mbc1.cpp  rom_only.cpp  rom_ram.cpp
src/stubs/io/: io.cpp
src/stubs/ppu/: ppu.cpp
src/timer/: timer.cpp
subprojects/: catch2.wrap
tests/: and.a.[hl].asm  and.a.n8.asm  bit.u3.r8.asm  call.asm  cpl.asm  dec.[hl].asm  jp.cc.n16.asm  jp.n16.asm  main.cpp  or.a.[hl].asm  rl.[hl].asm  rl.r8.asm  rlc.[hl].asm  rlca.asm  rra.asm  rrca.asm  sub.r8.asm  swap.r8.asm  xor.a.[hl].asm
tests/rom/source/instructions/: add.A.r8.asm  and.a.r8.asm  call.cc.asm  ccf.asm  or.a.n8.asm  or.a.r8.asm  res.u3.r8.asm  rla.asm  rr.r8.asm  rrc.r8.asm  rst.asm  xor.a.r8.asm
tests/source/instructions/: bit.u3.[HL].asm  dec.r8.asm  res.u3.[HL].asm  rlc.r8.asm  rr.[hl].asm  rrc.[hl].asm  sub.[hl].asm  sub.n8.asm  swap.[hl].asm  xor.a.n8.asm
tests/unit/: mbc1.test.cpp  mbc2.test.cpp  mbc3.test.cpp  mbc5.test.cpp
tools/: disassembler.cpp  header_dumper.cpp  header_fixer.cpp
tools/headerdumper/: main.cpp  metadata.json
tools/headerfixer/: main.cpp
